kubernetes/apps/adsb/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dump1090-fa
  namespace: adsb
spec:
  selector:
    app.kubernetes.io/name: adsb
  ports:
    - name: http
      port: 8080
      targetPort: dump1090-http
      protocol: TCP
    - name: avr-output
      port: 30002
      targetPort: avr-output
      protocol: TCP
    - name: beast-output
      port: 30005
      targetPort: beast-output
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: fr24feed
  namespace: adsb
spec:
  selector:
    app.kubernetes.io/name: adsb
  ports:
    - name: http
      port: 8754
      targetPort: fr24-http
      protocol: TCP
